--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "lib": ["es2019"],
-    "strict": true
+    "strict": false
   },
   "exclude": ["./cypress/*"]
 }
