--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
     "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/art": "^1.2.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "6.2.0",
     "@react-navigation/native": "6.0.8",
@@ -44,22 +45,37 @@
     "expo-tracking-transparency": "~2.1.0",
     "expo-web-browser": "~10.1.0",
     "jest": "^26.6.3",
+    "material-ui": "^0.20.2",
+    "material-ui-collapse-menu": "^1.1.2",
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
     "react": "17.0.1",
+    "react-chatbot-kit": "^2.1.0",
+    "react-collapsible": "^2.10.0",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-calendars": "^1.1267.0",
+    "react-native-chatbot": "^0.0.1-alpha.12",
+    "react-native-collapsible-list": "^2.2.2",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-get-random-values": "~1.7.0",
+    "react-native-gifted-chat": "^1.0.4",
+    "react-native-nested-listview": "^0.13.0",
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-sound": "^0.11.2",
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.5",
+    "react-router": "^6.4.0",
+    "react-simple-chatbot": "^0.6.1",
+    "react-social-login-buttons": "^3.6.1",
+    "reactjs-social-login": "^2.5.6",
     "redux-persist": "^6.0.0",
-    "uuid": "^8.3.2"
+    "styled-components": "^5.3.5",
+    "uuid": "^8.3.2",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
