--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "lib": ["es2019"],
-    "strict": false
+    "strict": false,
+    "allowJs": true,
   },
   "exclude": ["./cypress/*"]
 }
