--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/art": "^1.2.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/progress-bar-android": "^1.0.4",
+    "@react-native-community/slider": "^4.3.1",
     "@react-navigation/bottom-tabs": "6.2.0",
     "@react-navigation/native": "6.0.8",
     "@react-navigation/stack": "6.1.1",
