--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-native-calendars": "^1.1267.0",
     "react-native-chatbot": "^0.0.1-alpha.12",
     "react-native-collapsible-list": "^2.2.2",
+    "react-native-emoji-slider": "^0.0.8",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-get-random-values": "~1.7.0",
     "react-native-gifted-chat": "^1.0.4",
