--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "owner": "heylinda",
-    "name": "Hey Linda",
-    "slug": "hey-linda",
+    "owner": "BalanceIt",
+    "name": "BalanceIt",
+    "slug": "BalanceIt",
     "version": "1.2.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
