--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-native": "0.64.3",
     "react-native-calendars": "^1.1267.0",
     "react-native-chatbot": "^0.0.1-alpha.12",
+    "react-native-collapsible": "^1.6.0",
     "react-native-collapsible-list": "^2.2.2",
     "react-native-emoji-slider": "^0.0.8",
     "react-native-gesture-handler": "~2.1.0",
